# SkinCam

./: README.md
Data/: Settings.ini
Eagle/: Controller.brd  Controller.sch  Distribution.txt  LTC4365.ods  Pinout.txt  Ringlight.brd  Ringlight.sch
Firmware/Controller/: .cproject  .mxproject  .project  Controller.ioc
Firmware/Controller/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/Controller/Core/Inc/User/: assert.h  config.h  controller.h  delay.h  hostinterface.h  ltc2945.h  usbd_vendor.h  usermain.h
Firmware/Controller/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Firmware/Controller/Core/Src/User/: assert.cpp  controller.cpp  hostinterface.cpp  ltc2945.cpp  usbd_vendor.c  usermain.cpp
Firmware/Controller/USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c
Firmware/Ringlight/: CMakeLists.txt
Firmware/Ringlight/src/: hostinterface.cpp  hostinterface.h  ledcontrol.cpp  ledcontrol.h  main.cpp  nircontrol.cpp  nircontrol.h  ringlight.cpp  ringlight.h  trigger.cpp  trigger.h
FreeCAD/: Adapter.FCStd  H-BRS.FCStd  HousingBottom.FCStd  HousingTop.FCStd  ISF.FCStd  SharedData.FCStd
Software/SkinCam/: CMakeLists.txt  SkinCam.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractbuffer.h  assertions.cpp  assertions.h  camera.cpp  camera.h  cameraexception.cpp  cameraexception.h  cameraselectdialog.cpp  cameraselectdialog.h  cameraselectdialog.ui  camerasystem.cpp  camerasystem.h  cl2h.py  clheader.h  computebuffer.h  controller.cpp  controller.h  dummycamera.cpp  dummycamera.h  elapsedtimer.cpp  elapsedtimer.h  endianess.h  exception.cpp  exception.h  facedetector.cpp  facedetector.h  facedetectoroverlay.cpp  facedetectoroverlay.h  facedetectorwrapper.cpp  facedetectorwrapper.h  filter.cpp  filter.h  filters.h  fpscounter.cpp  fpscounter.h  (+81 more)
Software/SkinCam/CoSeSt2/: CoSeSt2.cpp  CoSeSt2.h
Software/SkinCam/Licenses/: libzip.txt
Software/SkinCam/filters/: averagefilter.cpp  averagefilter.h  barrelfilter.cpp  barrelfilter.h  coloradjustfilter.cpp  coloradjustfilter.h  cropfilter.cpp  cropfilter.h  filterworker.cpp  filterworker.h  sharpeningfilter.cpp  sharpeningfilter.h  smoothingfilter.cpp  smoothingfilter.h  transformationfilter.cpp  transformationfilter.h  whitecalibrationfilter.cpp  whitecalibrationfilter.h
Software/SkinCam/imageprocessor/: convertimages.cpp  convertimages.h  convertresults.cpp  convertresults.h  runfilters.cpp  runfilters.h  runskinclassifier.cpp  runskinclassifier.h  worker.cpp  worker.h
Software/SkinCam/imagewidget/: backend.h  openglwidget.cpp  openglwidget.h  softwarewidget.cpp  softwarewidget.h
Software/SkinCam/kernels/: abstractkernel.cpp  abstractkernel.h  averagekernel.h  barrelgenkernel.h  blurkernel.h  convertkernel.h  cropgenkernel.h  flipkernel.h  gaussiankernel.h  maskkernel.h  mergekernel.h  normdiffkernel.h  partialmaxkernel.h  partialsumkernel.h  remapkernel.h  roigenkernel.h  scalekernel.h  sharpenkernel.h  splitkernel.h  subtractkernel.h  thresholdkernel.h  transformgenkernel.h  widenkernel.h
Software/SkinCam/mainwindow/: acquisitionwidget.cpp  acquisitionwidget.h  acquisitionwidget.ui  advancedwidget.cpp  advancedwidget.h  advancedwidget.ui  averagewidget.cpp  averagewidget.h  averagewidget.ui  barrelwidget.cpp  barrelwidget.h  barrelwidget.ui  classifierwidget.cpp  classifierwidget.h  classifierwidget.ui  coloradjustmentwidget.cpp  coloradjustmentwidget.h  coloradjustmentwidget.ui  cropwidget.cpp  cropwidget.h  cropwidget.ui  detectionthresholdswidget.cpp  detectionthresholdswidget.h  detectionthresholdswidget.ui  facedetectionwidget.cpp  facedetectionwidget.h  facedetectionwidget.ui  ledpowerwidget.cpp  ledpowerwidget.h  ledpowerwidget.ui  regionofinterestwidget.cpp  regionofinterestwidget.h  regionofinterestwidget.ui  sharpeningwidget.cpp  sharpeningwidget.h  sharpeningwidget.ui  smoothingwidget.cpp  smoothingwidget.h  smoothingwidget.ui  statuswidget.cpp  (+8 more)
Software/SkinCam/opencl/: average.cl  barrelgen.cl  blur.cl  convert.cl  cropgen.cl  flip.cl  gaussian.cl  mask.cl  merge.cl  normdiff.cl  partialmax.cl  partialsum.cl  remap.cl  roigen.cl  scale.cl  sharpen.cl  split.cl  subtract.cl  threshold.cl  transformgen.cl  widen.cl
Software/SkinCam/skinclassifier/: boundingboxbackend.cpp  boundingboxbackend.h  classifierbackend.h  countskinpixels.cpp  countskinpixels.h  gaussianbackend.cpp  gaussianbackend.h  gaussianthresholdbackend.cpp  gaussianthresholdbackend.h  skinclassifierworker.cpp  skinclassifierworker.h  summatepixels.cpp  summatepixels.h
Software/udev/: 10-skincam.rules
Software/xdg/: SkinCam.desktop  SkinCamLegacy.desktop
